--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,18 @@
       <version>7.11.0</version>
       <scope>test</scope>
     </dependency>
+    <!-- Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>2.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.13</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.projectlombok</groupId>
